<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="home_header">My Nanodegree Apps!</string>

    <string name="action_settings">Settings</string>
    <string name="xyz_reader_button">XYZ Reader</string>
    <string name="library_button">Library App</string>
    <string name="build_it_bigger_button">Build it Bigger</string>
    <string name="capstone_button">Capstone: My Own App</string>
    <string name="scores_button">Scores App</string>
    <string name="spotify_streamer_button">Spotify Streamer</string>
</resources>
